--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 		text-align: justify;
 		}
 
-		.waterPlants, .moh, .vascularSpore, .seedPlants, .main{
+		.waterPlants, .moh, .vascularSpore, .seedPlants, .main, .block, .block2, .block3{
 			background-color: #FFFF00;
 			border: 2px outset #696969;
 			font-size: 30px; 
