--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,52 @@
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
 .container{
 		width: 1200px; 
 		margin: 0 auto; 
@@ -9,7 +58,7 @@
 		text-align: justify;
 		}
 
-		.waterPlants, .moh, .vascularSpore, .seedPlants, .main, .block, .block2, .block3{
+		.block, .block2, .block3{
 			background-color: #FFFF00;
 			border: 2px outset #696969;
 			font-size: 30px; 
@@ -18,12 +67,13 @@
 			padding: 30px; 
 			box-sizing: content-box;
 		}
-		
-		.block2{margin: 10px 0 0 0;}
+
+		.block2{
+			margin: 10px 0 0 0;}
 		
 		.block3{margin: 10px 0 0 0;}
 
-		.container ul{
+		.gallery_link{
 			text-align: left;
 		}
 		h1{font-size: 35px; 
@@ -43,41 +93,211 @@
 			text-align: left; 
 			padding: 15px; 	
 		}
-
-		.link_block{
-			position: fixed;
-			min-height: 100px;
-			min-width: 50px;
-			background: green;
-			top: calc(50% - 100px);
-			z-index: 5;
-			left: 0;
-			padding: 10px 10px;
-			font-size: 25px;
+/*Menu TOP*/
+		.menu{
 			text-align: center;
-			border: 2px solid black;
-			}
-
-		.img{
+			font-size: 0;
 			position: relative;
+			margin-top: 10px;
+			margin-bottom: 10px;
 		}
 
-		.info{
-			display: none;
-		}
-		.img:hover .info{
+		.menu li{
 			display: inline-block;
- 			position: absolute;
-  			height: 35px;
-  			width: calc(100%-500px);
-  			top: 1%;
-  			left: 0;
-  			right: 0;
-  			background-color: rgba(255, 255, 255, 0.5);
-  			text-align: center;
-  			color: black;
-		}
-		/*sdds*/
+			background: orange;
+			padding: 20px 30px;
+			margin-left: 100px;
+			position: relative;
+		}	
 
+		.menu li:first-child{
+			margin-left: 0;
+		}
+
+		.menu li a{
+			text-decoration: none;
+			color: white;
+			font-weight: 800;
+			font-size: 25px;
+			text-transform: uppercase;
+		}
 
 		
+
+		.in_menu li{
+			display: block;
+			background: orange;
+			margin-left: 0;
+			width: 100%;
+			position: relative;
+
+			}
+
+
+		.in_menu{
+			display: none;
+			position: absolute;
+			left: 0;	
+			top:100%;
+			font-size: 0;
+			
+			
+		}
+			
+		.menu li:hover{
+			background: green;
+		}
+
+		.in_in_menu{
+			display: none;		
+			left: -86%;
+			top: 0;
+			font-size: 0;			
+			position: absolute;
+			padding-right: 50px;
+						
+		}
+		.in_in_menu li{
+			
+		}
+		
+
+		.menu li:hover .in_menu{
+			display: inherit;
+	
+		}	
+
+		.in_menu li:hover .in_in_menu{
+			display: inherit;
+	
+		}
+/*table_cell_properties*/
+		.t_cell{
+		outline: 2px solid black;	
+		}
+
+		.t_cell_400{
+			background: yellow;
+			outline: 2px solid black;
+			width: 400px;
+			display: table-cell;
+		}
+
+		.t_cell_800{
+			background: green;
+			outline: 2px solid black;
+			width: 800px;
+			display: table-cell;
+		}
+
+		.t_cell_200{
+			background: green;
+			outline: 2px solid black;
+			width: 200px;
+			display: table-cell;
+		}
+/*in_blocks_properties*/
+
+		.in_block{
+		outline: 2px solid black;	
+		}
+
+		.in_block_0{
+		outline: 2px solid black;	
+		font-size: 0px;
+		}
+
+		.in_block_400{
+			background: yellow;
+			outline: 2px solid black;
+			width: 400px;
+			display: inline-block;
+			font-size: 14px ;
+			vertical-align: top;
+		}
+
+		.in_block_800{
+			background: green;
+			outline: 2px solid black;
+			width: 800px;
+			display: inline-block;
+			font-size: 14px ;
+			vertical-align: top;
+		}
+
+		.in_block_200{
+			background: green;
+			outline: 2px solid black;
+			width: 200px;
+			display: inline-block;
+			font-size: 14px ;
+			vertical-align: top;
+		}
+
+/*float_properties*/
+		
+		.float{
+		outline: 2px solid black;	
+		
+		}
+
+		.float_400{
+			background: yellow;
+			outline: 2px solid black;
+			width: 400px;
+			float: left;
+		}
+
+		.float_800{
+			background: green;
+			outline: 2px solid black;
+			width: 800px;
+			float: left;
+			
+		}
+
+		.float_200{
+			background: green;
+			outline: 2px solid black;
+			width: 200px;
+			float: left;
+			
+		}
+		
+		.clr:after{
+			content:"1";
+			clear:both;
+			display:block;
+		}
+/*flexbox properties*/
+	.flex_container{
+		display: flex;
+		outline: 2px solid black;
+	}
+	.flex{
+		display: flex;
+		outline: 2px solid black;
+
+	}
+	.flex400{
+		flex:0 0 400px;
+		background: green;
+		outline: 2px solid black;
+	}
+	.flex200{
+		flex:0 0 200px;
+		background: yellow;
+		outline: 2px solid black;
+	}
+	.flex800{
+		flex:0 0 800px;
+		background: brown;
+		outline: 2px solid black;
+	}
+	.flex_column{
+		background: grey;
+		outline: 2px solid black;
+	}
+	
+
+
